--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ Brand Colours:
 Google Font:
 - Kodchasan: 300lig, 400reg, 400ital, 700bol
 
-Links order:
+Links Order:
 - link, visited, hover, focus, active
 
 Breakpoints:
@@ -20,7 +20,7 @@ Breakpoints:
 
 @import url('https://fonts.googleapis.com/css2?family=Kodchasan:ital,wght@0,300;0,400;0,700;1,400&display=swap');
 
-/* Default Text Elements */
+/* default text elements */
 * {
     font-size: 16px;
     font-weight: 300;
@@ -69,7 +69,7 @@ h5 {
     font-size: 0.75em;
 }
 
-/* Link Stylings */
+/* link styles */
 a,
 .fa-brands.fa-twitter,
 .fa-brands.fa-dribbble,
